[package]
name = "stackable-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
typed-builder = "0.11.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"

# Bridge
stackable-bridge = { version = "0.1.0", path = "../stackable-bridge", features = ["resolvable"] }

# Yew / Component Related
yew = { version = "0.20", features = ["ssr"] }
bounce = { version = "0.5", features = ["helmet", "ssr"] }
yew-router = "0.17"

# Hyper Server and Tower Service.
hyper = { version = "0.14.23", features = ["runtime", "server", "http1"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
warp = { version = "0.3.3", default-features = false, optional = true }
tokio = { version = "1", optional = true }

# Command Line Tools
anyhow = { version = "1", optional = true }
clap = { version = "4.0.29", features = ["derive"], optional = true }
once_cell = "1.16.0"
thread_local = "1.1.4"
serde_urlencoded = "0.7.1"

[features]
warp-filter = ["dep:warp", "dep:tokio"]
tower-service = ["warp-filter", "dep:tower", "dep:hyper"]
hyper-server = ["tower-service"]
cli = ["dep:clap", "dep:anyhow", "hyper-server"]
