[package]
name = "stackable-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stackable"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stackable"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
typed-builder = "0.11.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
thread_local = "1.1.4"
once_cell = "1.17.0"
bincode = "1.3.3"
rand = "0.8.5"
lol_html = "0.3.2"

# Stackable Components
stackable-bridge = { version = "0.1.0", path = "../stackable-bridge", features = ["resolvable"] }
stackable-core = { version = "0.1.0", path = "../stackable-core" }

# Yew / Component Related
yew = { version = "0.20", features = ["ssr"] }
bounce = { version = "0.6", features = ["helmet", "ssr"] }
yew-router = "0.17"

# Hyper Server and Tower Service.
hyper = { version = "0.14.23", features = ["runtime", "server", "http1"], optional = true }
tower = { version = "0.4", features = ["util"], optional = true }
warp = { version = "0.3.3", default-features = false, optional = true, features = ["websocket"] }
tokio = { version = "1", optional = true }
serde_urlencoded = "0.7.1"
bytes = { version = "1", optional = true }
http = { version = "0.2", optional = true }
rust-embed = { version = "6.4.2", optional = true }

# Command Line Tools
anyhow = { version = "1", optional = true }
clap = { version = "4.1.1", features = ["derive", "env"], optional = true }
serde_json = "1.0.91"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
console = "0.15.5"
mime_guess = "2.0.4"

[features]
warp-filter = ["dep:warp", "dep:tokio", "dep:bytes", "dep:http", "dep:rust-embed"]
tower-service = ["warp-filter", "dep:tower", "dep:hyper"]
hyper-server = ["tower-service"]
cli = ["dep:clap", "dep:anyhow", "hyper-server"]
