[package]
name = "stackable-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
bincode = "1.3.3"

[features]
resolvable = []
