[package]
name = "stackable-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.9"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
stackable-backend = { path = "../stackable-backend", features = ["cli"], version = "0.1.0" }

time = "0.3"
rand = "0.8.5"
indicatif = "0.17.2"
console = "0.15.2"
reqwest = { version = "0.11.13", features = ["rustls-tls-webpki-roots"] }

# Stackable Components
stackable-core = { version = "0.1.0", path = "../stackable-core" }
