[package]
name = "stackable-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.10"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
stackable-backend = { path = "../stackable-backend", features = ["cli"], version = "0.1.0" }
notify = "5.0.0"
futures = { version = "0.3", features = ["std"], default-features = false }
cargo_metadata = "0.15"
serde_json = "1.0.91"
dotenvy = "0.15.6"

time = "0.3"
rand = "0.8.5"
indicatif = "0.17.2"
console = "0.15.4"
reqwest = { version = "0.11.13", features = ["rustls-tls-webpki-roots"] }

# Stackable Components
stackable-core = { version = "0.1.0", path = "../stackable-core" }
tokio-stream = { version = "0.1.11", features = ["sync"] }
webbrowser = "0.8.4"
