[package]
name = "stackable-frontend"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr", "hydration"] }
stackable-core = { path = "../stackable-core", version = "0.1.0" }
bounce = { version = "0.5", features = ["helmet"] }
