[package]
name = "stackable"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stackable-backend = { path = "../stackable-backend", version = "0.1.0" }
stackable-bridge = { path = "../stackable-bridge", version = "0.1.0" }
stackable-frontend = { path = "../stackable-frontend", version = "0.1.0" }
