[package]
name = "stctl"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
notify = "6.1.1"
futures = { version = "0.3", features = [
    "std",
    "async-await",
], default-features = false }
cargo_metadata = "0.17"
serde_json = "1.0.105"
dotenvy = "0.15.7"
time = "0.3"
rand = "0.8.5"
indicatif = "0.17.6"
console = "0.15.7"
reqwest = { version = "0.11.20", features = [
    "rustls-tls-webpki-roots",
    "stream",
], default-features = false }
tokio-stream = { version = "0.1.14", features = ["fs", "sync"] }
webbrowser = "0.8.11"

# Stellation Components
stellation-core = { version = "0.3.0", path = "../stellation-core" }
fs_extra = "1.3.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
