[package]
name = "stellation-backend-cli"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
# Stellation Components
stellation-backend = { version = "0.2.0", path = "../stellation-backend" }
stellation-backend-tower = { version = "0.2.0", path = "../stellation-backend-tower" }
stellation-core = { version = "0.2.0", path = "../stellation-core" }
stellation-bridge = { version = "0.2.0", path = "../stellation-bridge" }

# Yew / Component Related
yew = { version = "0.20", features = ["ssr"] }

# Other Deps
anyhow = { version = "1" }
clap = { version = "4.3.10", features = ["derive", "env"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
console = "0.15.7"
typed-builder = "0.14.0"
tower = "0.4.13"
hyper = "0.14.27"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
