[package]
name = "stellation-backend-tower"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
hyper = { version = "0.14.27", features = ["runtime", "server", "http1"] }
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1" }
futures = { version = "0.3", default-features = false, features = ["std"] }
yew = { version = "0.21", features = ["ssr"] }
warp = { version = "0.3.5", default-features = false }

# Stellation Components
stellation-backend-warp = { version = "0.3.0", path = "../stellation-backend-warp" }
stellation-backend = { version = "0.3.0", path = "../stellation-backend" }
stellation-bridge = { version = "0.3.0", path = "../stellation-bridge" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
