[package]
name = "stellation-backend-warp"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
# Yew / Component Related
yew = { version = "0.21", features = ["ssr"] }
yew-router = "0.17"
bounce = { version = "0.8", features = ["helmet", "ssr"] }

# Stellation Components
stellation-backend = { version = "0.3.0", path = "../stellation-backend" }
stellation-bridge = { version = "0.3.0", path = "../stellation-bridge" }

# HTTP
hyper = { version = "0.14.27", features = ["runtime", "server", "http1"] }
warp = { version = "0.3.5", default-features = false, features = ["websocket"] }
serde_urlencoded = "0.7.1"
bytes = { version = "1" }
http = { version = "0.2" }
rust-embed = { version = "8.0.0" }
mime_guess = "2.0.4"
lol_html = "1.1.1"

# Other
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1" }
once_cell = "1.18.0"
tracing = { version = "0.1.37" }
rand = "0.8.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
