[package]
name = "stellation-backend"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
thread_local = "1.1.4"
lol_html = "0.3.2"
serde_urlencoded = "0.7.1"

# Stellation Components
stellation-bridge = { version = "0.2.0", path = "../stellation-bridge", features = ["resolvable"] }
stellation-core = { version = "0.2.0", path = "../stellation-core" }

# Yew / Component Related
yew = { version = "0.20", features = ["ssr"] }
bounce = { version = "0.6", features = ["helmet", "ssr"] }
yew-router = "0.17"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
