[package]
name = "stellation-bridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = [
    "Kaede Hoshiakwa <futursolo@icloud.com>",
]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1.72"
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
bincode = "1.3.3"
gloo-net = "0.4.0"
js-sys = "0.3.64"
thiserror = "1"
bounce = { version = "0.8.0", features = ["query"] }
yew = "0.20.0"
typed-builder = "0.15.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
