[package]
name = "stellation-frontend"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
yew = { version = "0.20", features = ["csr", "hydration"] }
bounce = { version = "0.8", features = ["helmet"] }
yew-router = "0.17"
tracing = "0.1"
tracing-web = "0.1.2"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "time",
    "std",
    "fmt",
    "ansi",
] }
anymap2 = "0.13.0"

# Stellation Components
stellation-bridge = { version = "0.3.0", path = "../stellation-bridge" }

[dependencies.web-sys]
version = "0.3"
features = ["Document"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
