[package]
name = "stellation"
version = "0.3.0"
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/futursolo/stellation"
authors = ["Kaede Hoshiakwa <futursolo@icloud.com>"]
description = "The framework experience for Yew."
keywords = ["web", "wasm", "yew", "framework", "ssr"]
categories = ["wasm", "web-programming"]
readme = "../../README.md"
homepage = "https://github.com/futursolo/stellation"
license = "MIT OR Apache-2.0"

[dependencies]
stellation-core = { version = "0.3.0", path = "../stellation-core" }
stellation-frontend = { version = "0.3.0", path = "../stellation-frontend" }
stellation-backend = { version = "0.3.0", path = "../stellation-backend" }
stellation-bridge = { version = "0.3.0", path = "../stellation-bridge" }
stctl = { version = "0.3.0", path = "../stctl" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "documenting"]
