[package]
name = "example-fullstack-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellation-bridge = { version = "0.2.0", path = "../../../crates/stellation-bridge" }
time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.63"
thiserror = "1"

[features]
resolvable = ["stellation-bridge/resolvable"]
