[package]
name = "example-fullstack-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellation-bridge = { path = "../../../crates/stellation-bridge" }
time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.73"
thiserror = "1"
bounce = "0.8"

[features]
resolvable = []
