[package]
name = "example-fullstack-client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stackable-frontend = { version = "0.1.0", path = "../../../crates/stackable-frontend" }
yew = "0.20.0"
gloo = "0.8"

# Logging
tracing-web = "0.1.2"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["time", "std", "fmt", "ansi"] }

# Example Workspace
example-fullstack-view = { path = "../view" }
example-fullstack-api = { path = "../api" }

