[package]
name = "example-fullstack-client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
gloo = "0.8"

# Stellation Components
stellation-frontend = { version = "0.2.0", path = "../../../crates/stellation-frontend" }
stellation-stylist = { version = "0.2.0", path = "../../../crates/stellation-stylist", features = ["frontend"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["time", "std", "fmt", "ansi"] }

# Example Workspace
example-fullstack-view = { path = "../view" }
example-fullstack-api = { path = "../api" }

