[package]
name = "example-fullstack-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.29.1", features = ["full"] }
tracing = { version = "0.1.37" }
yew = "0.20.0"

# Stellation Components
stellation-backend = { version = "0.2.0", path = "../../../crates/stellation-backend" }
stellation-backend-tower = { version = "0.2.0", path = "../../../crates/stellation-backend-tower" }
stellation-backend-cli = { version = "0.2.0", path = "../../../crates/stellation-backend-cli" }

# Example Workspace
example-fullstack-view = { path = "../view" }
example-fullstack-api = { path = "../api", features = ["resolvable"] }
rust-embed = { version = "6.7.0", features = ["interpolate-folder-path"] }
