[package]
name = "example-fullstack-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1.32.0", features = ["full"] }
tracing = { version = "0.1.37" }
yew = "0.20.0"

# Stellation Components
stellation-backend = { path = "../../../crates/stellation-backend" }
stellation-backend-tower = { path = "../../../crates/stellation-backend-tower" }
stellation-backend-cli = { path = "../../../crates/stellation-backend-cli" }
stellation-stylist = { path = "../../../crates/stellation-stylist", features = [
    "backend",
] }

# Example Workspace
example-fullstack-view = { path = "../view" }
example-fullstack-api = { path = "../api", features = ["resolvable"] }
rust-embed = { version = "8.0.0", features = ["interpolate-folder-path"] }
