[package]
name = "example-fullstack-view"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0" }
example-fullstack-api = { path = "../api" }
stellation-bridge = { version = "0.2.0", path = "../../../crates/stellation-bridge" }
time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable", "macros"] }
tracing = "0.1.37"
bounce = { version = "0.8.0", features = ["helmet"] }
stylist = { version = "0.12.1", features = ["yew_integration"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement"
]
